<resources>
    <string name="app_name">Mental-Arithmetic-Challenge</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Welcome_fragment">欢迎</string>
    <string name="record_text">最高纪录：%d</string>
    <string name="app_title">口算测试</string>
    <string name="start_button">开始挑战</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="game_fragment">挑战中</string>
    <string name="game_score_text">得分：%d</string>
    <string name="game_question_text">1 + 1 = ?</string>
    <string name="cal_result">开始答题</string>
    <string name="game_button_1">1</string>
    <string name="game_button_2">2</string>
    <string name="game_button_3">3</string>
    <string name="game_button_4">4</string>
    <string name="game_button_5">5</string>
    <string name="game_button_6">6</string>
    <string name="game_button_7">7</string>
    <string name="game_button_8">8</string>
    <string name="game_button_9">9</string>
    <string name="game_button_0">0</string>
    <string name="game_button_c">c</string>
    <string name="game_button_submit">提交</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="win_result">挑战胜利</string>
    <string name="lose_result">挑战失败</string>
    <string name="win_record_result">创造了新纪录：%d</string>
    <string name="lose_record_result">你本次的战果：%d</string>
    <string name="over_return_button">返回</string>
    <string name="default_question">numberA + \" + \" + numberB + \" = ?\"</string>
    <string name="correct_hint">回答正确！请继续答题</string>
    <string name="quit_dialog_title">你确定要退出吗？</string>
    <string name="dialog_postive_button">是</string>
    <string name="dialog_negative_button">否</string>
</resources>